# icar

./: README.md
icar/: CMakeLists.txt  package.xml
icar_bringup/: CMakeLists.txt  package.xml
icar_bringup/launch/: icar_core.launch  icar_lidar_lds.launch  icar_lidar_ydx2.launch  icar_remote.launch  run_icar_with_all.launch  run_icar_with_joystick.launch  run_icar_with_laser.launch
icar_bringup/scripts/: robot_autostart.sh  udev_init.sh
icar_description/: CMakeLists.txt  package.xml
icar_description/config/: joint_names_icar.yaml
icar_description/launch/: display_gazebo.launch  display_rviz.launch
icar_description/meshes/: body.stl  wheel.stl
icar_description/rviz/: view_gazebo.rviz  view_rviz.rviz
icar_description/urdf/: common_properties.xacro  icar.gazebo.xacro  icar.urdf.xacro
icar_gazebo/: CMakeLists.txt  package.xml
icar_gazebo/launch/: icar_gazebo.launch
icar_gazebo/rviz/: icar_laser_nav.rviz
icar_gazebo/worlds/: ground.world  house.world  room.world
icar_msgs/: CMakeLists.txt  package.xml
icar_msgs/action/: PreciseMove.action
icar_msgs/msg/: ArmTarget.msg  VoiceTarget.msg
icar_msgs/srv/: TargetRecognition.srv
icar_navigation/: CMakeLists.txt  package.xml
icar_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
icar_navigation/launch/: amcl.launch  move_base.launch  nav_demo.launch  realrobot_nav.launch  rviz_nav.launch  sim_amcl.launch
icar_slam/: CMakeLists.txt  package.xml
icar_teleop/: CMakeLists.txt  package.xml  setup.py
(+32 files in other folders)
